# acm.timus

./: .gitignore  ID.txt  README.md  build_run_main.sh  build_run_rust.sh
codeforces/1151A/: main.rs
codeforces/1151B/: Cargo.toml  main_1151B.rs
codeforces/1151D/: main.rs
codeforces/1151E/: Cargo.toml  main_1151E.rs
codeforces/1439C/: Cargo.toml  main_1439C.rs
codeforces/1440A/: main.rs
codeforces/1440B/: Cargo.toml  main_1440B.rs
codeforces/1440C1/: Cargo.toml  main.rs
codeforces/1440D/: Cargo.toml  main_1440D.rs
codeforces/1469A/: Cargo.toml  main_1469A.rs
codeforces/1469C/: Cargo.toml  main_1469C.rs
codeforces/1469D/: Cargo.toml  main_1469D.rs
codeforces/1472A/: Cargo.toml  main_1472A.rs
codeforces/1472B/: Cargo.toml  main_1472B.rs
codeforces/1472C/: Cargo.toml  main_1472C.rs
codeforces/1472D/: Cargo.toml  main_1472D.rs
codeforces/1661A/: main.cpp
codeforces/1749A/: Cargo.toml  main.rs
codeforces/1749B/: main.rs
codeforces/1749C/: main.rs
tasks/1000/cpp/: CMakeLists.txt  main.cpp  test.cpp
tasks/1000/rust/: main.rs  main2.rs
tasks/1001/rust/: main.rs  main2.rs
tasks/1052/java/: build.xml
tasks/1052/rust/: main.rs  test_str.rs
tasks/1067/rust/: main.rs
tasks/1220/rust/: main.rs
tasks/1280/java/: build.xml
tasks/1429/: wa7.txt
tasks/1429/cpp/: CMakeLists.txt  main.cpp  test.cpp
tasks/1455/: test1.txt
tasks/1455/java/: build.xml
tasks/1455/rust/: main.rs
templates/rust/: bitset_graph.rs  d_bitset.rs  graph.rs  main.rs  main_matrix.rs  prefix_tree.rs  sorted_pair.rs  sparse_bitset.rs  time.rs  two_values.rs
(+63 files in other folders)
